--- a/home/home.html
+++ b/home/home.html
@@ -32,7 +32,7 @@
 
     <footer>
         <div class="footerContainer">
-            <p>Design & Built by <a href="https://github.com/RupendraSinghRajawat">@Rupendra Singh Rajawat </a>| <i class="far fa-copyright"></i> twentytwentyfour</p>
+            <p>Design & Built by <a href="https://rodsonebanga.com/">@rodsondesu </a>| <i class="far fa-copyright"></i> Rodson_desu</p>
         </div>
     </footer>
 
